--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-architect
+
+https://www.youtube.com/watch?v=XebeXoHOI_0
+
+[Domain Nugget Quiz 3](https://forms.office.com/Pages/ResponsePage.aspx?id=IjewOTa4akmF7IUPCVfKawrO7pbmfkxMkgwj-eMts9hUMUlGMFM3Rjg5STIwOUg1U0laTUU3VEVBWi4u)
